tests/agl/rejections/scope/input_redeclared.agl
param spec
let spec = "again"
